--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.3.0.RELEASE</version>
 		</dependency>
-
+		<!-- To compile JSP files -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>7.0.42</version>
+        </dependency>
 	</dependencies>
 </project>
