--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <version>7.0.42</version>
-        </dependency>
+        </dependency>        
+        <dependency>
+    		<groupId>javax.xml.bind</groupId>
+   			 <artifactId>jaxb-api</artifactId>
+    	<version>2.3.0</version>
+</dependency>
 	</dependencies>
 </project>
